k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: websphere-cafe
  labels:
    name: websphere-cafe
